--- a/engineering.html
+++ b/engineering.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Science</title>
+  <title>Engineering</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
 </head>
 <body>
   
-  <section class="menu cid-rzH9jrlpnt" once="menu" id="menu1-5">
+  <section class="menu cid-rzH9jrlpnt" once="menu" id="menu1-c">
 
     
 
@@ -56,9 +56,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link link mbr-black dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" aria-expanded="false">Career Videos</a>
                         <div class="dropdown-menu">
-                            <a class="mbr-black dropdown-item text-black display-4" href="page2.html">Science</a>
-                            <a class="mbr-black dropdown-item text-black display-4" href="page1.html" aria-expanded="false">Art</a><a class="mbr-black dropdown-item text-black display-4" href="page4.html" aria-expanded="false">Law</a>
-                            <a class="mbr-black dropdown-item text-black display-4" href="https://mobiri.se" aria-expanded="false">Construction</a><a class="mbr-black dropdown-item text-black display-4" href="page6.html" aria-expanded="false">Finance</a><a class="mbr-black dropdown-item text-black display-4" href="page3.html" aria-expanded="false">Engineering</a><a class="mbr-black dropdown-item text-black display-4" href="page7.html" aria-expanded="false">Medicine</a><a class="mbr-black dropdown-item text-black display-4" href="page8.html" aria-expanded="false">Humanities</a>
+                            <a class="mbr-black dropdown-item text-black display-4" href="science.html">Science</a>
+                            <a class="mbr-black dropdown-item text-black display-4" href="arts.html" aria-expanded="false">Art</a><a class="mbr-black dropdown-item text-black display-4" href="law.html" aria-expanded="false">Law</a>
+                            <a class="mbr-black dropdown-item text-black display-4" href="construction.html" aria-expanded="false">Construction</a><a class="mbr-black dropdown-item text-black display-4" href="finance.html" aria-expanded="false">Finance</a><a class="mbr-black dropdown-item text-black display-4" href="engineering.html" aria-expanded="false">Engineering</a><a class="mbr-black dropdown-item text-black display-4" href="medicine.html" aria-expanded="false">Medicine</a><a class="mbr-black dropdown-item text-black display-4" href="humaities.html" aria-expanded="false">Humanities</a>
                         </div>
                     </li></ul>
 
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="header2 educationm4_header2 cid-smyZdzOqvH" id="header2-7">
+<section class="header2 educationm4_header2 cid-smz76tt4J6" id="header2-f">
 
 	
 
@@ -102,7 +102,7 @@
 	
 </section>
 
-<section class="features5 educationm4_features5 cid-smz3DuFLOk" id="features5-8">
+<section class="features5 educationm4_features5 cid-smz6ZYA7Ql" id="features5-d">
 
 	
 
@@ -110,7 +110,7 @@
 	<div class="container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-md-12">
-				<h2 class="mbr-section-title pb-2 mbr-bold mbr-fonts-style align-left display-2">Science</h2>
+				<h2 class="mbr-section-title pb-2 mbr-bold mbr-fonts-style align-left display-2">Engineering</h2>
 				<div class="line-wrap">
 					<div class="line"></div>
 				</div>
@@ -129,16 +129,16 @@
 					</div>
 					<div class="content-box">
 						<div class="date-box">
-							<h3 class="date mbr-fonts-style mbr-bold display-5">BSc</h3>
-							<h3 class="mounth mbr-fonts-style display-4">Computer Science</h3>
+							<h3 class="date mbr-fonts-style mbr-bold display-5">BA</h3>
+							<h3 class="mounth mbr-fonts-style display-4">Mechanical Engineering</h3>
 							<h3 class="time mbr-fonts-style mbr-bold display-4">Uiversity of Pretoria</h3>
 						</div>
 						<div class="card-box">
 							<h4 class="card-title mbr-fonts-style mbr-bold display-5">
-								Software Developer&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</h4>
+								Art Education&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</h4>
 							<div class="ico-line">
 								<div class="px-1 pb-3 pr-2 mbr-iconfont mbr-iconfont-social mbri-user" style="color: rgb(10, 28, 68); fill: rgb(10, 28, 68);" media-simple="true"></div>
-								<h3 class="rev mbr-fonts-style display-4"><font color="#0a1c44">Dimpho&nbsp;</font>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h3>
+								<h3 class="rev mbr-fonts-style display-4"><font color="#0a1c44">Sheridan&nbsp;</font>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h3>
 							</div>
 						</div>
 					</div>
@@ -228,7 +228,7 @@
 	</div>
 </section>
 
-<section class="footer1 educationm4_footer1 cid-smz3WuEahC" id="footer1-9">
+<section class="footer1 educationm4_footer1 cid-smz70s9aj1" id="footer1-e">
 
 	
 
