--- a/humaities.html
+++ b/humaities.html
@@ -56,9 +56,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link link mbr-black dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" aria-expanded="false">Career Videos</a>
                         <div class="dropdown-menu">
-                            <a class="mbr-black dropdown-item text-black display-4" href="page2.html">Science</a>
-                            <a class="mbr-black dropdown-item text-black display-4" href="page1.html" aria-expanded="false">Art</a><a class="mbr-black dropdown-item text-black display-4" href="page4.html" aria-expanded="false">Law</a>
-                            <a class="mbr-black dropdown-item text-black display-4" href="https://mobiri.se" aria-expanded="false">Construction</a><a class="mbr-black dropdown-item text-black display-4" href="page6.html" aria-expanded="false">Finance</a><a class="mbr-black dropdown-item text-black display-4" href="page3.html" aria-expanded="false">Engineering</a><a class="mbr-black dropdown-item text-black display-4" href="page7.html" aria-expanded="false">Medicine</a><a class="mbr-black dropdown-item text-black display-4" href="page8.html" aria-expanded="false">Humanities</a>
+                            <a class="mbr-black dropdown-item text-black display-4" href="science.html">Science</a>
+                            <a class="mbr-black dropdown-item text-black display-4" href="arts.html" aria-expanded="false">Art</a><a class="mbr-black dropdown-item text-black display-4" href="law.html" aria-expanded="false">Law</a>
+                            <a class="mbr-black dropdown-item text-black display-4" href="construction.html" aria-expanded="false">Construction</a><a class="mbr-black dropdown-item text-black display-4" href="finance.html" aria-expanded="false">Finance</a><a class="mbr-black dropdown-item text-black display-4" href="engineering.html" aria-expanded="false">Engineering</a><a class="mbr-black dropdown-item text-black display-4" href="medicine.html" aria-expanded="false">Medicine</a><a class="mbr-black dropdown-item text-black display-4" href="humaities.html" aria-expanded="false">Humanities</a>
                         </div>
                     </li></ul>
 
