--- a/index.html
+++ b/index.html
@@ -207,9 +207,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <p class="mbr-text links mbr-fonts-style display-4">
-                    Copyright (c) 2025
-                    <a href="https://mobiri.se/" class="text-white">Mobirise</a>
-                </p>
+                    Copyright (c) 2020 | Made with Love by <a href="http://rubydotsolutions.co.za" class="text-danger">Ruby Dot Solutions</a></p>
             </div>
         </div>
     </div>
