--- a/arts.html
+++ b/arts.html
@@ -123,7 +123,7 @@
 					<div class="card-img">
 						
                         <video width="100%" controls="">
-                          <source src="./assets/videos/arts/nikita1.mp4" type="video/mp4" title="">
+                          <source src="nikita1.mp4" type="video/mp4" title="">
                           Your browser does not support HTML video.
                         </video>
 						
