--- a/business.html
+++ b/business.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Humanities</title>
+  <title>Business</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
 </head>
 <body>
   
-  <section class="menu cid-rzH9jrlpnt" once="menu" id="menu1-q">
+  <section class="menu cid-rzH9jrlpnt" once="menu" id="menu1-12">
 
     
 
