--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown js-float-line nav-right" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobiri.se">
+                        <a class="nav-link link mbr-black text-black display-4" href="index.html">
                             Home</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -68,10 +68,6 @@
                     <li class="nav-item">
                         <a class="nav-link link mbr-black text-black display-4" href="https://mobiri.se">
                             Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobiri.se">
-                            Help</a>
                     </li></ul>
 
                 
@@ -105,7 +101,7 @@
         <div class="row justify-content-center">
             <div class="form-1 col-md-8 col-lg-5" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I7C100x3ET40nVZifbE6ZdrXCz+xeLjPJRSdDLA/inAeEf+uDaim63uelI8mceBqdunE6HfB2D5YTm7GphtEsuOpBb5nlivIOPDUjC3QFSUT5c9T2xfZvaxjob4iG1nY">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TDbsjVKBdr9Un7ZEOZN7sfZDM6XVyImBA5gY6i7ODiqZQPC1TB8IRN6U6my4x/a3UHMQ1x90d2xW5yY1uXF6qcpzF35S1uIgNZvSfaO8hG6B0RUqhN9lydyH5MDXQCHo">
                         <div class="form-row input-main">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
