--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown js-float-line nav-right" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobiri.se">
+                        <a class="nav-link link mbr-black text-black display-4" href="index.html">
                             Home</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -70,10 +70,6 @@
                     <li class="nav-item">
                         <a class="nav-link link mbr-black text-black display-4" href="https://mobiri.se">
                             Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobiri.se">
-                            Help</a>
                     </li></ul>
 
                 
