remove mobirise link

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 
                     
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobiri.se">
+                        <a class="nav-link link mbr-black text-black display-4" href="contact.html">
                             Contact</a>
                     </li></ul>
 
@@ -101,7 +101,7 @@
         <div class="row justify-content-center">
             <div class="form-1 col-md-8 col-lg-5" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TDbsjVKBdr9Un7ZEOZN7sfZDM6XVyImBA5gY6i7ODiqZQPC1TB8IRN6U6my4x/a3UHMQ1x90d2xW5yY1uXF6qcpzF35S1uIgNZvSfaO8hG6B0RUqhN9lydyH5MDXQCHo">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1gtulMJexBQ/dBJ36Euj+q2wpQ3qlgQVVUsEayH5DXRbmpkHdN60swB/rjbciioEMnTPZC4m3sil63ZBVFijxlVTPzS8xYiErzoXGxKcIMstEwJzSTzXKNqG7E0OD7a7">
                         <div class="form-row input-main">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
