--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                     
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-4" href="https://mobiri.se">
+                        <a class="nav-link link mbr-black text-black display-4" href="contact.html">
                             Contact</a>
                     </li></ul>
 
